--- a/DTLib.csproj
+++ b/DTLib.csproj
@@ -31,14 +31,22 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Color.cs" />
     <Compile Include="CompressedArray.cs" />
+    <Compile Include="ConsoleGUI\Container.cs" />
+    <Compile Include="ConsoleGUI\Control.cs" />
+    <Compile Include="ConsoleGUI\IDrawable.cs" />
+    <Compile Include="ConsoleGUI\Label.cs" />
+    <Compile Include="ConsoleGUI\Window.cs" />
     <Compile Include="Dtsod.cs" />
     <Compile Include="cs9somefix.cs" />
-    <Compile Include="Filework.cs" />
+    <Compile Include="Filesystem\Directory.cs" />
+    <Compile Include="Filesystem\File.cs" />
     <Compile Include="ColoredConsole.cs" />
+    <Compile Include="Filesystem\OldFilework.cs" />
+    <Compile Include="Network\FSP.cs" />
+    <Compile Include="Network\OldNetwork.cs" />
+    <Compile Include="Network\Package.cs" />
     <Compile Include="PublicLog.cs" />
-    <Compile Include="Network.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hasher.cs" />
     <Compile Include="SecureRandom.cs" />
