--- a/DTLib.csproj
+++ b/DTLib.csproj
@@ -37,16 +37,19 @@
     <Compile Include="ConsoleGUI\IDrawable.cs" />
     <Compile Include="ConsoleGUI\Label.cs" />
     <Compile Include="ConsoleGUI\Window.cs" />
-    <Compile Include="Dtsod.cs" />
+    <Compile Include="ConsoleGUI\WindowOld.cs" />
+    <Compile Include="Dtsod\DtsodV22.cs" />
+    <Compile Include="Dtsod\DtsodV21.cs" />
     <Compile Include="cs9somefix.cs" />
+    <Compile Include="Dtsod\ValueTypes.cs" />
     <Compile Include="Filesystem\Directory.cs" />
     <Compile Include="Filesystem\File.cs" />
-    <Compile Include="ColoredConsole.cs" />
     <Compile Include="Filesystem\OldFilework.cs" />
+    <Compile Include="ColoredConsole.cs" />
     <Compile Include="Network\FSP.cs" />
-    <Compile Include="Network\OldNetwork.cs" />
     <Compile Include="Network\Package.cs" />
     <Compile Include="PublicLog.cs" />
+    <Compile Include="Network\OldNetwork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hasher.cs" />
     <Compile Include="SecureRandom.cs" />
