--- a/DTLib.csproj
+++ b/DTLib.csproj
@@ -31,6 +31,7 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Color.cs" />
     <Compile Include="CompressedArray.cs" />
     <Compile Include="ConsoleGUI\Container.cs" />
     <Compile Include="ConsoleGUI\Control.cs" />
