--- a/DTLib.csproj
+++ b/DTLib.csproj
@@ -40,6 +40,7 @@
     <Compile Include="ConsoleGUI\Window.cs" />
     <Compile Include="ConsoleGUI\WindowOld.cs" />
     <Compile Include="Dtsod\DtsodV22.cs" />
+    <Compile Include="Dtsod\DtsodV23.cs" />
     <Compile Include="Dtsod\DtsodV21.cs" />
     <Compile Include="cs9somefix.cs" />
     <Compile Include="Dtsod\ValueTypes.cs" />
@@ -53,6 +54,7 @@
     <Compile Include="Network\OldNetwork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hasher.cs" />
+    <Compile Include="SafeMutex.cs" />
     <Compile Include="SecureRandom.cs" />
     <Compile Include="SimpleConverter.cs" />
     <Compile Include="TImer.cs" />
