--- a/DTLib.csproj
+++ b/DTLib.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Dtsod\DtsodV21.cs" />
     <Compile Include="cs9somefix.cs" />
     <Compile Include="Dtsod\ValueTypes.cs" />
+    <Compile Include="EventHandlerAsync.cs" />
     <Compile Include="Filesystem\Directory.cs" />
     <Compile Include="Filesystem\File.cs" />
     <Compile Include="Filesystem\OldFilework.cs" />
@@ -53,11 +54,22 @@
     <Compile Include="Network\OldNetwork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hasher.cs" />
+    <Compile Include="Reactive\ReactiveProvider.cs" />
+    <Compile Include="Reactive\ReactiveStream.cs" />
+    <Compile Include="Reactive\ReactiveListener.cs" />
+    <Compile Include="Reactive\ReactiveWorker.cs" />
     <Compile Include="SafeMutex.cs" />
     <Compile Include="SecureRandom.cs" />
     <Compile Include="SimpleConverter.cs" />
     <Compile Include="TImer.cs" />
     <Compile Include="XXHash.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include=".gitignore" />
+    <Content Include="DTLib.sln" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
