--- a/DTLib.csproj
+++ b/DTLib.csproj
@@ -51,6 +51,10 @@
     <Compile Include="Network\OldNetwork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hasher.cs" />
+    <Compile Include="Reactive\ReactiveListener.cs" />
+    <Compile Include="Reactive\ReactiveSender.cs" />
+    <Compile Include="Reactive\ReactiveStream.cs" />
+    <Compile Include="Reactive\ReactiveProvider.cs" />
     <Compile Include="SecureRandom.cs" />
     <Compile Include="FrameworkFix.cs" />
     <Compile Include="TImer.cs" />
