--- a/DTLib.csproj
+++ b/DTLib.csproj
@@ -35,6 +35,8 @@
     <Compile Include="Color.cs" />
     <Compile Include="CompressedArray.cs" />
     <Compile Include="DefaultLogger.cs" />
+    <Compile Include="Filesystem\Symlink.cs" />
+    <Compile Include="MyDict.cs" />
     <Compile Include="Dtsod\DtsodV21.cs" />
     <Compile Include="Dtsod\DtsodV22.cs" />
     <Compile Include="Dtsod\V30\DtsodSerializableAttribute.cs" />
