--- a/DTLib.csproj
+++ b/DTLib.csproj
@@ -32,9 +32,11 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Color.cs" />
     <Compile Include="CompressedArray.cs" />
     <Compile Include="DefaultLogger.cs" />
+    <Compile Include="Extensions\Collections.cs" />
+    <Compile Include="Extensions\BaseConverter.cs" />
+    <Compile Include="Extensions\ToStringConverter.cs" />
     <Compile Include="Filesystem\Symlink.cs" />
     <Compile Include="MyDict.cs" />
     <Compile Include="Dtsod\DtsodV21.cs" />
@@ -59,7 +61,7 @@
     <Compile Include="Reactive\ReactiveProvider.cs" />
     <Compile Include="Reactive\TimeSignedObject.cs" />
     <Compile Include="SecureRandom.cs" />
-    <Compile Include="FrameworkFix.cs" />
+    <Compile Include="Extensions\FrameworkFix.cs" />
     <Compile Include="TImer.cs" />
     <Compile Include="XXHash.cs" />
   </ItemGroup>
