--- a/DTLib.csproj
+++ b/DTLib.csproj
@@ -32,14 +32,13 @@
     <Reference Include="System.Data" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompressedArray.cs" />
     <Compile Include="DefaultLogger.cs" />
     <Compile Include="Extensions\Collections.cs" />
     <Compile Include="Extensions\BaseConverter.cs" />
     <Compile Include="Extensions\IfMethod.cs" />
     <Compile Include="Extensions\StringConverter.cs" />
+    <Compile Include="Extensions\FrameworkFix.cs" />
     <Compile Include="Filesystem\Symlink.cs" />
-    <Compile Include="MyDict.cs" />
     <Compile Include="Dtsod\DtsodV21.cs" />
     <Compile Include="Dtsod\DtsodV22.cs" />
     <Compile Include="Dtsod\V30\DtsodSerializableAttribute.cs" />
@@ -56,15 +55,16 @@
     <Compile Include="Network\OldNetwork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Hasher.cs" />
-    <Compile Include="Reactive\ReactiveListener.cs" />
-    <Compile Include="Reactive\ReactiveSender.cs" />
-    <Compile Include="Reactive\ReactiveStream.cs" />
-    <Compile Include="Reactive\ReactiveProvider.cs" />
-    <Compile Include="Reactive\TimeSignedObject.cs" />
-    <Compile Include="SecureRandom.cs" />
-    <Compile Include="Extensions\FrameworkFix.cs" />
     <Compile Include="TImer.cs" />
     <Compile Include="XXHash.cs" />
+    <Compile Include="Experimental\CompressedArray.cs" />
+    <Compile Include="Experimental\MyDict.cs" />
+    <Compile Include="Experimental\SecureRandom.cs" />
+    <Compile Include="Experimental\Reactive\ReactiveListener.cs" />
+    <Compile Include="Experimental\Reactive\ReactiveProvider.cs" />
+    <Compile Include="Experimental\Reactive\ReactiveSender.cs" />
+    <Compile Include="Experimental\Reactive\ReactiveStream.cs" />
+    <Compile Include="Experimental\Reactive\TimeSignedObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include=".gitignore" />
