--- a/DTLib.csproj
+++ b/DTLib.csproj
@@ -1,80 +1,16 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{CE793497-2D5C-42D8-B311-E9B32AF9CDFB}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DTLib</RootNamespace>
-    <AssemblyName>DTLib</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <LangVersion>9.0</LangVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Build|AnyCPU' ">
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DebugSymbols>true</DebugSymbols>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="DefaultLogger.cs" />
-    <Compile Include="Extensions\Collections.cs" />
-    <Compile Include="Extensions\BaseConverter.cs" />
-    <Compile Include="Extensions\IfMethod.cs" />
-    <Compile Include="Extensions\StringConverter.cs" />
-    <Compile Include="Extensions\FrameworkFix.cs" />
-    <Compile Include="Filesystem\Symlink.cs" />
-    <Compile Include="Dtsod\DtsodV21.cs" />
-    <Compile Include="Dtsod\DtsodV22.cs" />
-    <Compile Include="Dtsod\V30\DtsodSerializableAttribute.cs" />
-    <Compile Include="Dtsod\V30\DtsodV30.cs" />
-    <Compile Include="Dtsod\V30\DtsodVersion.cs" />
-    <Compile Include="EventHandlerAsync.cs" />
-    <Compile Include="Filesystem\Directory.cs" />
-    <Compile Include="Filesystem\File.cs" />
-    <Compile Include="Filesystem\OldFilework.cs" />
-    <Compile Include="ColoredConsole.cs" />
-    <Compile Include="Network\FSP.cs" />
-    <Compile Include="Network\Package.cs" />
-    <Compile Include="PublicLog.cs" />
-    <Compile Include="Network\OldNetwork.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Hasher.cs" />
-    <Compile Include="TImer.cs" />
-    <Compile Include="XXHash.cs" />
-    <Compile Include="Experimental\CompressedArray.cs" />
-    <Compile Include="Experimental\MyDict.cs" />
-    <Compile Include="Experimental\SecureRandom.cs" />
-    <Compile Include="Experimental\Reactive\ReactiveListener.cs" />
-    <Compile Include="Experimental\Reactive\ReactiveProvider.cs" />
-    <Compile Include="Experimental\Reactive\ReactiveSender.cs" />
-    <Compile Include="Experimental\Reactive\ReactiveStream.cs" />
-    <Compile Include="Experimental\Reactive\TimeSignedObject.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include=".gitignore" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="README.md" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <PropertyGroup>
-    <PostBuildEvent>
-    </PostBuildEvent>
-  </PropertyGroup>
+﻿<Project Sdk="Microsoft.NET.Sdk">
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>false</ImplicitUsings>
+		<Nullable>disable</Nullable>
+		<DebugType>portable</DebugType>
+		<AssemblyName>DTLib</AssemblyName>
+		<CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	</PropertyGroup>
+	<ItemGroup>
+	  <Compile Remove="Experimental\**" />
+	  <EmbeddedResource Remove="Experimental\**" />
+	  <None Remove="Experimental\**" />
+	</ItemGroup>
 </Project>
