--- a/.editorconfig
+++ b/.editorconfig
@@ -75,7 +75,7 @@ dotnet_style_allow_statement_immediately_after_block_experimental = true
 #### Рекомендации по написанию кода C# ####
 
 # Предпочтения var
-csharp_style_var_elsewhere = false
+csharp_style_var_elsewhere = true
 csharp_style_var_for_built_in_types = false
 csharp_style_var_when_type_is_apparent = true
 
