quick fix of files path

--- a/TestProgram/TestProgram.csproj
+++ b/TestProgram/TestProgram.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk"> 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
@@ -14,10 +14,10 @@
 	  <ProjectReference Include="..\DTLib\DTLib.csproj" />
 	</ItemGroup>
 	<ItemGroup>
-	  <None Update="DtsodV2X\*">
+	  <None Include="DtsodV2X\*">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
-	  <None Update="DtsodV30\*">
+	  <None Include="DtsodV30\*">
 	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
