--- a/DtsodC/Makefile
+++ b/DtsodC/Makefile
@@ -1,31 +1,27 @@
-SRC_LIB=src/autosize_array/Autoarr.c src/throw.c src/strict_types.c
-SRC_COM=src/test.c
+SRC=src/*.c
+OUTDIR=bin/
+OUTFILE=dtsodc.com
 
-all: clear_c std_build test 
+all: clear_c clear_bin test 
 
 clear_c:
 	clear
 
-clear:
-	@echo "\e[36m-----------------[clear]-------------------\e[0m"
-	rm bin/*.com
+clear_bin:
+	@echo "\e[36m-----------------[clear_bin]-------------------\e[0m"
+	touch $(OUTDIR)_.com
+	rm $(OUTDIR)*.com
 
 # using sdlib
 STDARGS=-D STDLIB
 
-std_build: std_build_test
+std_build: 
+	@echo "\e[36m-------------[std_build]---------------\e[0m"
+	gcc $(STDARGS) $(SRC) -o $(OUTDIR)std_$(OUTFILE)
 
-std_build_lib:
-	@echo "\e[36m-------------[std_build_lib]---------------\e[0m"
-	gcc $(STDARGS) $(SRC_LIB) -o bin/dtsodc_test_STD.dll 
-
-std_build_test: 
-	@echo "\e[36m-------------[std_build_test]---------------\e[0m"
-	gcc $(STDARGS) $(SRC_LIB) $(SRC_COM) -o bin/dtsodc_test_STD.com 
-
-std_test: std_build_test
+std_test: std_build
 	@echo "\e[36m----------------[std_test]------------------\e[0m"
-	bin/dtsodc_test_STD.com
+	$(OUTDIR)std_$(OUTFILE)
 
 
 # using cosmopolitan
@@ -33,16 +29,10 @@ COSMARGS_PRE=-g -O -static -fno-pie -no-pie -mno-red-zone -nostdlib -nostdinc -D
 COSMARGS_POST=-Wl,--oformat=binary -Wl,--gc-sections -Wl,-z,max-page-size=0x1000 -fuse-ld=bfd -Wl,-T,cosmopolitan/ape.lds \
 	-include cosmopolitan/cosmopolitan.h cosmopolitan/crt.o ./cosmopolitan/ape.o cosmopolitan/cosmopolitan.a
 
-build: build_test
+build:
+	@echo "\e[36m----------------[build]----------------\e[0m"
+	gcc $(COSMARGS_PRE) $(SRC) $(COSMARGS_POST) -o $(OUTDIR)$(OUTFILE)
 
-build_lib:
-	@echo "\e[36m----------------[build_lib]-----------------\e[0m"
-	gcc $(COSMARGS_PRE) $(SRC_LIB) $(COSMARGS_POST) -o bin/dtsodc_test.dll
-
-build_test:
-	@echo "\e[36m----------------[build_test]----------------\e[0m"
-	gcc $(COSMARGS_PRE) $(SRC_LIB) $(SRC_COM) $(COSMARGS_POST) -o bin/dtsodc_test.com
-
-test: build_test
+test: build
 	@echo "\e[36m-----------------[test]----------------\e[0m"
-	bin/dtsodc_test.com
+	$(OUTDIR)$(OUTFILE)
