search tree is almost done

--- a/DtsodC/Makefile
+++ b/DtsodC/Makefile
@@ -8,9 +8,12 @@ std: clear_c std_build std_test
 clear_c:
 	clear
 clear_bin:
-	@echo "\e[36m-----------------[clear_bin]-------------------\e[0m"
+	@echo "\e[36m-------------[clear_bin]---------------\e[0m"
 	touch $(OUTDIR)_.com
 	rm $(OUTDIR)*.com
+
+clang: CMP=clang
+clang: all
 
 # using sdlib
 STDARGS=-D STDLIB -O
@@ -18,7 +21,7 @@ std_build:
 	@echo "\e[36m-------------[std_build]---------------\e[0m"
 	$(CMP) $(STDARGS) $(SRC) -o $(OUTDIR)std_$(OUTFILE)
 std_test:
-	@echo "\e[36m----------------[std_test]------------------\e[0m"
+	@echo "\e[36m-------------[std_test]----------------\e[0m"
 	$(OUTDIR)std_$(OUTFILE)
 
 # using cosmopolitan
