--- a/DtsodC/Makefile
+++ b/DtsodC/Makefile
@@ -3,7 +3,6 @@ OUTDIR=bin/
 OUTFILE=dtsodc.com
 CMP=gcc
 all: clear_c build test
-std: clear_c std_build std_test
 
 clear_c:
 	clear
@@ -15,22 +14,10 @@ clear_bin:
 clang: CMP=clang
 clang: all
 
-# using sdlib
-STDARGS=-D STDLIB -O
-std_build: 
-	@echo "\e[36m-------------[std_build]---------------\e[0m"
-	$(CMP) $(STDARGS) $(SRC) -o $(OUTDIR)std_$(OUTFILE)
-std_test:
-	@echo "\e[36m-------------[std_test]----------------\e[0m"
-	$(OUTDIR)std_$(OUTFILE)
-
-# using cosmopolitan
-COSMARGS_PRE=-g -O -static -fno-pie -no-pie -mno-red-zone -nostdlib -nostdinc -D COSMOPOLITAN 
-COSMARGS_POST=-Wl,--oformat=binary -Wl,--gc-sections -Wl,-z,max-page-size=0x1000 -fuse-ld=bfd -Wl,-T,cosmopolitan/ape.lds \
-	-include cosmopolitan/cosmopolitan.h cosmopolitan/crt.o ./cosmopolitan/ape.o cosmopolitan/cosmopolitan.a
-build:
-	@echo "\e[36m----------------[build]----------------\e[0m"
-	$(CMP) $(COSMARGS_PRE) $(SRC) $(COSMARGS_POST) -o $(OUTDIR)$(OUTFILE)
+CMPARGS=-O -static
+build: 
+	@echo "\e[36m-------------[build]---------------\e[0m"
+	$(CMP) $(CMPARGS) $(SRC) -o $(OUTDIR)$(OUTFILE)
 test:
-	@echo "\e[36m-----------------[test]----------------\e[0m"
+	@echo "\e[36m-------------[test]----------------\e[0m"
 	$(OUTDIR)$(OUTFILE)
