--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,12 @@
         "ranges": "c",
         "streambuf": "c",
         "chrono": "c",
-        "string": "c"
+        "string": "c",
+        "deque": "c",
+        "list": "c",
+        "unordered_map": "c",
+        "vector": "c",
+        "system_error": "c"
     },
     "C_Cpp.errorSquiggles": "Disabled"
 }
