--- a/DtsodC/Makefile
+++ b/DtsodC/Makefile
@@ -1,7 +1,7 @@
-SRC=$(wildcard src/*c) $(wildcard src/**/*.c)
+SRC=$(wildcard [^tests]**/*.c)
 TESTS=$(wildcard tests/*c) $(wildcard tests/**/*.c)
-OUTDIR=bin/
-OUTFILE=$(OUTDIR)dtsodc.com
+OUTDIR=.bin
+OUTFILE=$(OUTDIR)/dtsodc.com
 CMP=gcc
 all: clear_c build test
 
@@ -9,19 +9,20 @@ clear_c:
 	clear
 clear_bin:
 	@echo -e '\e[96m--------------[clear_bin]--------------\e[0m'
-	touch $(OUTDIR)_.com
-	rm $(OUTDIR)*.com
+	touch $(OUTDIR)/_.com
+	rm $(OUTDIR)/*.com
 
 clang: CMP=clang
 clang: all
 
 CMPARGS= -Wall -Wno-discarded-qualifiers $(SRC) $(TESTS) -o $(OUTFILE)
 build:
+	@echo $(SRC)
 	@echo -e '\n\e[96m----------------[build]----------------\e[0m'
-	@mkdir -p bin
+	@mkdir -p $(OUTDIR)
 	$(CMP) -O1 -flto $(CMPARGS)
 build_dbg: 
-	@mkdir -p bin
+	@mkdir -p $(OUTDIR)
 	@echo -e '\n\e[96m--------------[build_dbg]--------------\e[0m'
 	$(CMP) -O0 -g $(CMPARGS).dbg
 test:
