--- a/DTLib/DTLib.csproj
+++ b/DTLib/DTLib.csproj
@@ -2,7 +2,7 @@
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net48</TargetFrameworks>
 		<LangVersion>preview</LangVersion>
-		<ImplicitUsings>false</ImplicitUsings>
+		<ImplicitUsings>disable</ImplicitUsings>
 		<Nullable>disable</Nullable>
 		<DebugType>portable</DebugType>
 		<AssemblyName>DTLib</AssemblyName>
@@ -12,6 +12,7 @@
 		<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
 		<Configurations>Debug;Release;Release-net48</Configurations>
 	</PropertyGroup>
+	
 	<PropertyGroup Condition=" '$(Configuration)' == 'Release-net48' ">
 		<TargetFramework>net48</TargetFramework>
 	</PropertyGroup>
@@ -21,15 +22,11 @@
 		<Reference Include="System.Dynamic" />
 		<Reference Include="Microsoft.CSharp" />
 	</ItemGroup>
+	
 	<ItemGroup Condition=" '$(Configuration)' != 'Debug' ">
 	  	<Compile Remove="Experimental\**" />
-	  	<EmbeddedResource Remove="Experimental\**" />
-		<None Remove="Experimental\**" />
-		<Compile Remove="Dtsod\V30\**" />
-		<EmbeddedResource Remove="Dtsod\V30\**" />
-		<None Remove="Dtsod\V30\**" />
 	</ItemGroup>
 	<ItemGroup>
-	  <Compile Include="Experimental\Tester.cs" />
+		<Compile Remove="Experimental\ConsoleGUI\**" />
 	</ItemGroup>
 </Project>
