--- a/DTLib.Dtsod/DTLib.Dtsod.csproj
+++ b/DTLib.Dtsod/DTLib.Dtsod.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>net6.0;net48</TargetFrameworks>
+        <TargetFramework>net6.0</TargetFramework>
         <LangVersion>10</LangVersion>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>disable</Nullable>
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="Dependencies\kerep.dll">
+      <None Update="Dependencies\*">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
