--- a/DTLib.Dtsod/DTLib.Dtsod.csproj
+++ b/DTLib.Dtsod/DTLib.Dtsod.csproj
@@ -25,7 +25,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <None Update="Dependencies\*">
+      <None Update="Dependencies\**\*">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
     </ItemGroup>
