--- a/DTLib.Network/DTLib.Network.csproj
+++ b/DTLib.Network/DTLib.Network.csproj
@@ -8,6 +8,7 @@
         <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
         <DebugType>portable</DebugType>
         <Configurations>Debug;Release;Release-net48</Configurations>
+		<Platforms>AnyCPU;x64;x86;arm64</Platforms>
     </PropertyGroup>
     
     <ItemGroup>
