--- a/DTLib.Exceptions/DTLib.Exceptions.csproj
+++ b/DTLib.Exceptions/DTLib.Exceptions.csproj
@@ -10,8 +10,9 @@
 	</PropertyGroup>
 
     <ItemGroup>
-		<Compile Remove="Ben.Demystifier\**"/>
+		<Compile Remove="Ben.Demystifier\**" />
+		<None Remove="Ben.Demystifier\**" />
         <ProjectReference Include="..\DTLib\DTLib.csproj" />
-        <ProjectReference Include="Ben.Demystifier\src\Ben.Demystifier\Ben.Demystifier.csproj" />
+		<ProjectReference Include="Ben.Demystifier\src\Ben.Demystifier\Ben.Demystifier.csproj" />
     </ItemGroup>
 </Project>
