--- a/DTLib.Network/DTLib.Network.csproj
+++ b/DTLib.Network/DTLib.Network.csproj
@@ -1,11 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <LangVersion>10</LangVersion>
+        <TargetFrameworks>net6.0;net48</TargetFrameworks>
+        <LangVersion>preview</LangVersion>
         <ImplicitUsings>disable</ImplicitUsings>
         <Nullable>disable</Nullable>
         <ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+        <DebugType>embedded</DebugType>
         <Configurations>Debug;Release;Release-net48</Configurations>
 		<Platforms>AnyCPU;x64;x86;arm64</Platforms>
     </PropertyGroup>
@@ -18,7 +19,6 @@
     <ItemGroup Condition=" '$(TargetFramework)' == 'net48' ">
         <Reference Include="System.Net" />
         <Reference Include="System.Net.Http" />
-        <Reference Include="System.Dynamic" />
         <Reference Include="Microsoft.CSharp" />
     </ItemGroup>
     
