--- a/DTLib.Tests/DTLib.Tests.csproj
+++ b/DTLib.Tests/DTLib.Tests.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk"> 
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFrameworks>net6.0;net48</TargetFrameworks>
 		<LangVersion>10</LangVersion>
 		<ImplicitUsings>false</ImplicitUsings>
 		<Nullable>disable</Nullable>
 		<CheckForOverflowUnderflow>True</CheckForOverflowUnderflow>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 		<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
-		<RootNamespace>DTLib.Tests</RootNamespace>
+		<DebugType>embedded</DebugType>
 		<Configurations>Debug;Release;Release-net48</Configurations>
 		<Platforms>AnyCPU;x64;x86;arm64</Platforms>
 	</PropertyGroup>
@@ -29,10 +29,5 @@
 	<ItemGroup>
 		<None Update="Dtsod\TestResources\**\*" CopyToOutputDirectory="Always" />
 	</ItemGroup>
-	
-	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
-		<Exec Command="rm -rf ../bin/" />
-		<Exec Command="cp -r bin/ ../bin/" />
-	</Target>
 
 </Project>
