--- a/DTLib.Logging/DTLib.Logging.csproj
+++ b/DTLib.Logging/DTLib.Logging.csproj
@@ -13,11 +13,14 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DTLib\DTLib.csproj" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.3" />
     </ItemGroup>
-
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.3" />
+        <Compile Remove="Ben.Demystifier\**" />
+        <None Remove="Ben.Demystifier\**" />
     </ItemGroup>
-
+    <ItemGroup>
+      <ProjectReference Include="..\DTLib\DTLib.csproj" />
+      <ProjectReference Include="Ben.Demystifier\src\Ben.Demystifier\Ben.Demystifier.csproj" />
+    </ItemGroup>
 </Project>
