--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "DTLib.Logging/Ben.Demystifier"]
-	path = DTLib.Logging/Ben.Demystifier
-	url = https://github.com/Timerix22/Ben.Demystifier.git
+[submodule "DTLib.Ben.Demystifier"]
+	path = DTLib.Ben.Demystifier
+	url = https://github.com/Timerix22/DTLib.Ben.Demystifier.git
